--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <h2>Lista de Exercicios</h2>
     <div class="Exercises">
         <ul>
-            <li><a href="../Exercicio_1/exercicio1.html">ex1</a></li>
+            <li><a href="../Exercicio_1/minharotina.html">ex1</a></li>
         </ul>
     </div>
 </body>
