cadastro usuario inciado

--- a/index.html
+++ b/index.html
@@ -10,7 +10,8 @@
     <h2>Lista de Exercicios</h2>
     <div class="Exercises">
         <ul>
-            <li><a href="./Minha Rotina/minharotina.html">ex1</a></li>
+            <li><a href="./Minha Rotina/minharotina.html">Minha Rotina</a></li>
+            <li><a href="./Cadastro Usuario/cadastro.html">Cadastro Usuario</a></li>
         </ul>
     </div>
 </body>
