--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Exercicios AH</title>
+    <link rel="stylesheet" href="estiloIndex.css">
 </head>
 <body>
     <h1>Atividade WEB</h1>
